spring-boot-hello-world/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: jackie
  labels:
    app: hello-world
    deployment: hello-world
  annotations:
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"hello-world:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"hello-world\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        deployment: hello-world
    spec:
      containers:
        - name: hello-world
          image: image-registry.openshift-image-registry.svc:5000/jackie/hello-world:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: app-data
              mountPath: /data # mount the volume at /data inside the container
            - name: db-secret-volume
              mountPath: /etc/secrets
              readOnly: true # mount the secret as read-only
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: hello-world-pvc # reference to the PVC
        - name: db-secret-volume
          secret:
            secretName: db-secret
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: hello-world
              topologyKey: kubernetes.io/hostname
      schedulerName: default-scheduler
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: hello-world
