spring-boot-hello-world/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: jackie
  labels:
    app: hello-world
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: hello-world-serving-cert
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 8443 # Service port
      targetPort: 8443 # Container port
