spring-boot-hello-world/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  namespace: jackie
  labels:
    app: hello-world
spec:
  to:
    kind: Service
    name: hello-world
  port:
    targetPort: 8443
  tls:
    termination: reencrypt # Use 'reencrypt' for TLS between route and pod
    # omit destinationCACertificate entirely. In that case the router implicitly trusts the cluster service CA,
    # so you don’t need to chase rotations.
