spring-boot-hello-world/openshift/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: jackie
  labels:
    app: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  namespace: jackie
  labels:
    app: hello-world
spec:
  to:
    kind: Service
    name: hello-world
  port:
    targetPort: 8080
